--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,8 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
+        context: src/OrderService
+        file: src/OrderService/Dockerfile
         push: true
         tags: |
           ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.APP_NAME }}:latest
